[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "gridworld-survival"
version = "1.0.0"
description = "GridWorld Survival - Mini-game RL environment"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "openai>=1.35",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "app:main"

[tool.setuptools.packages.find]
where = ["."]